feat(domain): add Order.allReservationIds and InventoryReservation.withId()
- Add 8-param Order constructor with allReservationIds list
- 7-param constructor delegates to 8-param with empty list (backward compat)
- Add InventoryReservation.withId() factory for persisted-data reconstruction
- allReservationIds is immutable and null-safe